@@ -27,6 +27,7 @@ package com.iluwatar.pageobject;
 import java.awt.Desktop;
 import java.io.File;
 import java.io.IOException;
+import java.util.Locale;
 import lombok.extern.slf4j.Slf4j;
 
 /**
@@ -77,8 +78,28 @@ public final class App {
         Desktop.getDesktop().open(applicationFile);
 
       } else {
-        // java Desktop not supported - above unlikely to work for Windows so try instead...
-        Runtime.getRuntime().exec("cmd.exe start " + applicationFile);
+        // java Desktop not supported - use ProcessBuilder for cross-platform support
+        var os = System.getProperty("os.name").toLowerCase(Locale.ROOT);
+        ProcessBuilder pb;
+        if (os.contains("win")) {
+          // Empty string title arg prevents cmd start treating a quoted path as the window title
+          var systemRoot = System.getenv("SystemRoot");
+          if (systemRoot == null) {
+            systemRoot = "C:\\Windows";
+          }
+          pb =
+              new ProcessBuilder(
+                  systemRoot + "\\System32\\cmd.exe",
+                  "/c",
+                  "start",
+                  "",
+                  applicationFile.getAbsolutePath());
+        } else if (os.contains("mac")) {
+          pb = new ProcessBuilder("open", applicationFile.getAbsolutePath()); // NOSONAR
+        } else {
+          pb = new ProcessBuilder("xdg-open", applicationFile.getAbsolutePath()); // NOSONAR
+        }
+        pb.start();
       }
 
     } catch (IOException ex) {
